<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gcs.com.br.gcscifras.layout.ViewCifraActivity"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
        >

        <TextView
            android:id="@+id/tvLineOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="." />

        <TextView
            android:id="@+id/tvLineTwoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="." />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbAutoRoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoRoll"
            android:checked="true"/>

        <!--EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="3"
            /-->

    </LinearLayout>


        <TextView
            android:id="@+id/tvCifra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines = "5000"
            android:scrollbars = "vertical"
            android:text="@string/cipher" />

        <Button
            android:id="@+id/btnFechar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            />

</LinearLayout>
