<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gcs.com.br.gcscifras.layout.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPorOrdem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderedByName"
            />

        <Button
            android:id="@+id/btnPorArtista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Artistas"
            />

        <Button
            android:id="@+id/btnPorGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gênero"
            />

        <Button
            android:id="@+id/btnPorAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Álbum"
            />

        <Button
            android:id="@+id/btnPorLancamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lançamento"
            />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"/>

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/totalCipherServer" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
